--- a/src/app.html
+++ b/src/app.html
@@ -9,4 +9,13 @@
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
+	<style>
+		:fullscreen,
+		::backdrop {
+			background-color: rgba(255, 255, 255, 0);
+		}
+		body {
+			font-family: Arial, sans-serif;
+		}
+	</style>
 </html>
